examples/invalid/bool_addition.lama
bool x ;
bool t = true ;
x = t + false ; 
print x ;